traces/bug_447.txt
examples++-load/Element_P1dc1.cpp:452: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/Element_P1dc1.cpp:452:1: initialization of callDoLoadInit
450.       static AddNewFE3  P1dttLagrange3d1("P1dc3d1",&TypeOfFE_LagrangeDC3dtt1  );
451.   }
452. > LOADFUNC(finit)
453.   
454.   

examples++-load/Element_P1dc1.cpp:452:1: call to DoLoadInit
450.       static AddNewFE3  P1dttLagrange3d1("P1dc3d1",&TypeOfFE_LagrangeDC3dtt1  );
451.   }
452. > LOADFUNC(finit)
453.   
454.   

examples++-load/Element_P1dc1.cpp:452:1: call to addInitFunct
  450.       static AddNewFE3  P1dttLagrange3d1("P1dc3d1",&TypeOfFE_LagrangeDC3dtt1  );
  451.   }
  452. > LOADFUNC(finit)
  453.   
  454.   

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
